styles/app.scss
@import "./variables";
@import "./buttons";
@import "./footer.scss";
@import "./GT-Walsheim-Pro/stylesheet.css";
@import "./authentication.scss";
@import "./layout.scss";
@import "./modal";
@import "./cards.scss";
@import "./dashboard/dashboard.scss";
@import "./terms.scss";
@import "./table";
@import "~bootstrap/dist/css/bootstrap.min.css";
@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Inter:wght@300;400;500&display=swap");

html {
	padding: 0;
	margin: 0;
	font-size: 62.5%;
}

body {
	font-family: "GT Walsheim Pro", sans-serif;
	position: relative;
	background-color: #fff;
	height: auto;
}

a {
	color: inherit;
	text-decoration: none !important;

	&:hover {
		text-decoration: none !important;
	}
}

* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
	outline: none;
	scroll-behavior: smooth;
}
p,
h1,
h2,
h3,
h4 {
	margin: 0;
}

.font-normal {
	font-weight: $normal-weight;
}

.font-light {
	font-weight: $light-weight;
}

.font-bold {
	font-weight: $bold-weight;
}

::-webkit-scrollbar {
	width: 8px;
	margin-left: 5px;
	max-height: 3px;
	display: none;
}

/* Track */
::-webkit-scrollbar-track {
	background: white;
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: #555;
	transition: all 0.3s ease;
	border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background: #555;
}

:root {
	scrollbar-color: rgb(210, 210, 210) rgb(46, 54, 69) !important;
	scrollbar-width: thin !important;
}

ul {
	margin: 0;
}

ul,
ol {
	margin: 0;
	padding: 0;
}

.App {
	position: relative;
	width: 100%;
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

.container {
	padding: 0 8%;
	max-width: 1440px;
	margin-left: auto;
	margin-right: auto;
	width: 100%;
}

.pointer {
	cursor: pointer;
}

.section--title {
	font-weight: 500;
	font-size: 1.6rem;
	line-height: 2.4rem;
	color: #ecc337;
	margin-bottom: 1.2rem;
}

.section--heading {
	font-weight: 500;
	font-size: 3.6rem;
	line-height: 4.4rem;
	letter-spacing: -0.02em;
}

.section--sub-text {
	font-weight: 400;
	font-size: 2rem;
	line-height: 3rem;
	margin-top: 2rem;
	color: #ebebeb;
}

.text--light {
	color: #fff;
}

.text--dark {
	color: #101828;
}

.text--grey-500 {
	color: #667085;
}

.side_bar {
	position: fixed;
	top: 0;
	right: 0;
	height: 5000px;
	width: 100%;
	max-width: 450px;
	color: white;
	z-index: 120;
	padding: 10px 20px;
	transform: translate3d(100%, 0, 0);
	transition: transform 0.4s;
	background: #fff;

	&__close {
		position: fixed;
		top: 20px;
		width: 50px;
		display: flex;
		align-items: center;
		justify-content: center;
		height: 50px;
		right: 20px;

		.bar {
			margin: 0;
			width: 20px;
			height: 1px;
			transform: rotate(45deg);
			transition: transform 0.2s ease;
			background-color: $primary-dark;
		}

		.bar:nth-child(2) {
			margin: 0;
			width: 20px;
			position: absolute;
			transform: rotate(-45deg);
			transition: transform 0.5s ease;
		}
	}

	.side__links {
		display: flex;
		flex-direction: column;
		margin-top: 6rem;
		padding-left: 20px;

		.side__link {
			margin-bottom: 40px;
			font-style: normal;
			font-weight: 400;
			font-size: 20px;
			line-height: 18px;
			color: $primary-dark;
			transition: all 0.3s ease;
			cursor: pointer;

			&:hover {
				color: $primary-yellow;
			}

			&:active {
				color: $primary-yellow;
			}
		}
	}

	.side__cta {
		display: flex;
		margin-top: 20px;
		width: 100%;
		justify-content: center;
	}
}

.side_bar.visible {
	transform: translateZ(0);
	max-width: 450px;
	padding-top: 50px;
	padding-right: 40px;
	box-shadow: -4px 4px 12px #00000029;
}

.nav-profile {
	display: flex;
	align-items: center;

	.nav-username {
		display: flex;
		align-items: center;
		cursor: pointer;
		p {
			font-weight: 500;
			font-size: 20px;
			line-height: 23px;
			margin-left: 15px;
			color: #141416;
			margin-right: 10px;
		}
	}
}

.loading-div {
	height: 100%;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
}

.store-m {
	margin-top: -5px;
	margin-right: 10px;
}

.google-icon {
	margin-top: -5px;
	margin-right: 10px;
}

@media screen and (max-width: 650px) {
	.section--heading {
		font-weight: 500;
		font-size: 2.7rem;
		line-height: 4.4rem;
	}

	.section--sub-text {
		font-weight: 400;
		font-size: 1.5rem;
		line-height: 2.1rem;
		margin-top: 2rem;
	}

	.text--center {
		text-align: center;
	}
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

/* Firefox */
input[type="number"] {
	-moz-appearance: textfield;
}

.global-flex {
	display: flex;
}

.mll {
	margin-left: 10px;
}

.teams-loading {
	width: 100%;
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

